<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ivan.eventer.view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fon_1"
        android:weightSum="100">

        <ImageView
            android:layout_width="330dp"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:src="@drawable/rocket"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/textBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/loginEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="@color/textBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColorHint="@color/textBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/loginPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="@color/textBlack"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/logBtn"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="12.5"
            android:layout_marginTop="15dp"
            android:text="@string/btnLogin"
            android:textSize="@dimen/size_text_profile_midle"
            android:textColor="@color/textBlack"
            android:padding="20dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/back_for_btn_login"/>

    </LinearLayout>


</FrameLayout>
